--- a/_config.yml
+++ b/_config.yml
@@ -233,8 +233,8 @@ display_tags: ['Arch', 'Compiler', 'OS', 'GEM5', 'code'] # this tags will be dis
 
 scholar:
 
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Chen]
+  first_name: [Ruiyang,R.]
 
   style: apa
   locale: en
